# engine

./: cc.config.json  package-lock.json
@types/: jsb.d.ts
@types/pal/: audio.d.ts
cocos/2d/components/: graphics.ts  label.ts  mask.ts  sprite.ts
cocos/2d/framework/: deprecated.ts  renderable-2d.ts  ui-component.ts
cocos/2d/renderer/: batcher-2d.ts  render-data.ts  render-draw-info.ts  render-entity.ts  render-flow-2d.ts  render-flow2d.ts
cocos/3d/models/: baked-skinning-model.jsb.ts  baked-skinning-model.ts  skinning-model.ts
cocos/3d/skeletal-animation/: skeletal-animation-state.ts  skeletal-animation-utils.ts  skeletal-animation.ts
cocos/audio/: audio-source.ts
cocos/core/: director.ts  game.ts  root.ts
cocos/core/builtin/: effects.ts
cocos/core/components/: renderable-component.ts
cocos/core/pipeline/: define.ts  render-pipeline.ts
cocos/core/renderer/: native-scene.ts
cocos/core/scene-graph/: node-ui-properties.ts  node.ts
cocos/dragon-bones/: ArmatureCache.ts  ArmatureDisplay.ts  ArmatureSystem.ts  AttachUtil.ts  CCFactory.ts  CCSlot.ts  CCTextureData.ts  DragonBonesAsset.ts  DragonBonesAtlasAsset.ts  index.jsb.ts  index.ts
cocos/dragon-bones/assembler/: index.ts  simple.ts
cocos/game/: game.ts
cocos/particle-2d/: particle-system-2d.ts
cocos/spine/: attach-util.ts  index.jsb.ts  index.ts  skeleton-cache.ts  skeleton-data.ts  skeleton-system.ts  skeleton-texture.ts  skeleton.ts  spine2d.wasm  track-entry-listeners.ts  vertex-effect-delegate.ts
cocos/spine/assembler/: simple.ts
cocos/spine/cocos-spine/: instantiated.ts  js-file-util.d.ts  js-file-util.js  partial-renderer-ui.ts  skeleton2d-imply-native.ts  skeleton2d-imply-wasm.ts  skeleton2d-imply.ts  skeleton2d-native.jsb.ts  skeleton2d-native.ts  skeleton2d-partial-renderer.ts  spine-assembler.ts  spine-core-x.ts  spine-define.ts  spine-skeleton-animation.ts  spine-skeleton-cache.ts  spine-skeleton-imply-native.ts  spine-skeleton-imply-wasm.ts  spine-skeleton-instance-interface.ts  spine-skeleton-native-type.jsb.ts  spine-skeleton-native-type.ts  spine-skeleton-renderer-ui.ts  spine-skeleton-ui.ts  spine-skeleton.ts  spine-wasm-util.ts  (+2 more)
cocos/tiledmap/: tiled-layer.ts  tiled-map.ts  tiled-object-group.ts  tiled-tile.ts  tiled-types.ts  tiled-utils.ts  tmx-xml-parser.ts
cocos/webgpu/: instantiated.ts
cocos2d/tilemap/: CCTiledMap.js
editor/engine-features/: render-config.json
native/: .gitignore  CMakeLists.txt
native/cocos/editor-support/spine-wasm/: .gitignore  AtlasAttachmentLoaderExtension.cpp  AtlasAttachmentLoaderExtension.h  CMakeLists.txt  ImportDef.h  LogUtil.cpp  LogUtil.h  MeshDataDef.h  README.md  SkMeshData.cpp  SkMeshData.h  SkeletonObject.cpp  SkeletonObject.h  data-convert.cpp  data-convert.h  log-util.cpp  log-util.h  share-mem.cpp  share-mem.h  spine-export.cpp  spine-mesh-data.cpp  spine-mesh-data.h  spine-model.cpp  spine-model.h  spine-skeleton-instance.cpp  spine-skeleton-instance.h  spine-type-export.cpp  spine-wasm.cpp  spine-wasm.h  spineWasmUtil.cpp  util-function.cpp  util-function.h  wasmSpineExtension.cpp  wasmSpineExtension.h
pal/wasm/: wasm-minigame.ts
scripts/native-pack-tool/: package-lock.json
scripts/typedoc-plugin/: package-lock.json
(+143 files in other folders)
