cmake_minimum_required(VERSION 3.0)

set(APP_NAME "spine" CACHE STRING "Project Name")
project(${APP_NAME}_wasm)

include_directories(../)
file(GLOB SPINE_CORE_SRC "../spine/*.cpp")
file(GLOB COCOS_ADAPTER_SRC "./*.cpp")

add_executable(${APP_NAME} ${SPINE_CORE_SRC} ${COCOS_ADAPTER_SRC} )
#add_executable(${APP_NAME} ${COCOS_ADAPTER_SRC})

set(EMS_LINK_FLAGS "-O2 -s WASM=0 -s ALLOW_MEMORY_GROWTH=1 -s INITIAL_MEMORY=33554432 -s MAXIMUM_MEMORY=134217728 -Wl -s DYNAMIC_EXECUTION=0 -s ERROR_ON_UNDEFINED_SYMBOLS=0 -flto --no-entry --bind -s USE_ES6_IMPORT_META=0 -s EXPORT_ES6=1 -s MODULARIZE=1 -s EXPORT_NAME='spineWasm' -s ENVIRONMENT=web -s NO_EXIT_RUNTIME=1 -s LLD_REPORT_UNDEFINED")

set_target_properties(${APP_NAME} PROPERTIES CXX_STANDARD 11 LINK_FLAGS ${EMS_LINK_FLAGS})